<resources>
    <string name="app_name">todo</string>
    <string name="new_task">New Task</string>
    <string name="add_task_heading">What is to be done?</string>
    <string name="hint_task">Enter Task Here</string>
    <string name="due_date">Due date</string>
    <string name="priority">Priority</string>
    <string name="add_button">add_button</string>
    <string name="add">Add</string>
    <string name="ashu">Ashutosh Vishwakarma</string>
</resources>